[gd_scene load_steps=4 format=2]

[ext_resource path="res://mapgen.gd" type="Script" id=1]
[ext_resource path="res://src/test/ControlCam.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

var dir = 1.0
var speed = rand_range(0.05,0.3)

# Called when the node enters the scene tree for the first time.
func _ready():
	randomize()
	set_rotation( rand_range(0.0,360.0) ) 
	if randi() % 100 < 50: dir = -1.0
	set_process(true)
	
func _process(delta):
	set_rotation( get_rotation() + speed*delta*dir)"

[node name="mapgen" type="Node2D"]
script = ExtResource( 1 )

[node name="train1" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="train2" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="train3" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="train4" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="train5" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="train6" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 510.381, 399.344 )
current = true
script = ExtResource( 2 )
